syntax = "proto3";
import "FoodPost.proto";
option java_multiple_files = true;
option java_package = "sep3.g3.rightoversjava.grpc.generated";
package sep3.g3;

message UserRequest {
  string username = 1;
}

message UserCreationRequest {
  string username = 1;
  string firstname = 2;
  string password = 3;
  AddressMessage address=4;
}

message UserLoginRequest {
  string username = 1;
  string password = 2;
}

message AddressMessage {
  int32 address_id = 1;
  string street = 2;
  string street_number = 3;
  int32 post_code = 4;
  string city = 5;
  double longitude = 6;
  double latitude = 7;
}

message UserMessage {
  string username = 1;
  string firstname = 2;
  string password = 3;
  AddressMessage address = 4;
}

message ReservationMessage {
  int32 reservation_id = 1;
  FoodPostResponse food_post = 2;
  UserMessage user = 3;
}

service UserService {
  rpc getByUsername(UserRequest) returns (UserMessage);
  rpc register(UserCreationRequest) returns (UserMessage);
  rpc login(UserLoginRequest) returns (UserMessage);
  rpc getReservationsByUsername(UserRequest) returns (stream ReservationMessage);
}